--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -9,56 +9,40 @@
 }
 
 html {
+  padding-top: 67px;
   overflow-x: hidden;
   @include respond-to('small') {
     font-size: 2vh;
+    padding-top: 56px;
   }
 }
 
 body {
-  @extend %font-text;
+  @extend %font-roboto-regular;
   background-size: 100vw 100vh;
 }
 
 h1 {
-  @extend %font-headline;
+  @extend %font-roboto-regular;
   font-size: 3rem;
 }
 
 h2 {
-  @extend %font-headline;
+  @extend %font-roboto-regular;
   font-size: 2rem;
 }
 
-h3 {
-  @extend %font-headline;
-}
-
-h4 {
-  @extend %font-headline;
-}
-
 p {
-  @extend %font-text;
+  @extend %font-roboto-light;
   font-size: 1.4rem;
 }
 
 button {
-  @extend %font-headline;
   text-transform: uppercase;
 }
 
-a:link,
-a:active,
-a:visited {
+a:link, a:active, a:visited {
   text-decoration: none;
   cursor: pointer;
   color: inherit;
-}
-
-mark {
-  display: inline;
-  margin: 0px !important;
-  padding: 0px !important;
-  font-weight: 600;
 }
