--- a/src/app/public/home-page/home-page.component.html
+++ b/src/app/public/home-page/home-page.component.html
@@ -1,3 +1,9 @@
-<p>
-  home-page works!
-</p>
+<input type="text" id="ingredientRaw" placeholder="Enter an ingredient to parse" [(ngModel)]="ingredientRaw">
+<input type="submit" value="Parse" name="Parse" (click)="parse(ingredientRaw)" />
+<ul *ngIf="ingredientParsed">
+  <li><span class="fieldName">Quantity</span>: {{ ingredientParsed.quantity }}</li>
+  <li><span class="fieldName">Unit</span>: {{ ingredientParsed.unit }}</li>
+  <li><span class="fieldName">Name</span>: {{ ingredientParsed.name }}</li>
+  <li><span class="fieldName">Other</span>: {{ ingredientParsed.other }}</li>
+  <li><span class="fieldName">Comment</span>: {{ ingredientParsed.comment }}</li>
+</ul>
