--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -41,7 +41,9 @@ button {
   text-transform: uppercase;
 }
 
-a:link, a:active, a:visited {
+a:link,
+a:active,
+a:visited {
   text-decoration: none;
   cursor: pointer;
   color: inherit;
