--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import './breakpoints';
 @import './fonts';
 @import './global';
