--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -9,11 +9,13 @@
 }
 
 html {
-  padding-top: 67px;
+  padding-top: 12px;
+  padding-left: 5%;
+  padding-right: 5%;
   overflow-x: hidden;
   @include respond-to('small') {
     font-size: 2vh;
-    padding-top: 56px;
+    padding-top: 1%;
   }
 }
 
