Ignoring the 'other' field from the parser service's results

--- a/src/app/public/home-page/home-page.component.html
+++ b/src/app/public/home-page/home-page.component.html
@@ -18,8 +18,7 @@
     <mat-list-item role="listitem"><span class="fieldName">Quantity</span>: {{ parseResult.ingredientParsed.quantity }}</mat-list-item>
     <mat-list-item role="listitem"><span class="fieldName">Unit</span>: {{ parseResult.ingredientParsed.unit }}</mat-list-item>
     <mat-list-item role="listitem"><span class="fieldName">Name</span>: {{ parseResult.ingredientParsed.name }}</mat-list-item>
-    <mat-list-item role="listitem"><span class="fieldName">Other</span>: {{ parseResult.ingredientParsed.other }}</mat-list-item>
-    <mat-list-item role="listitem"><span class="fieldName">Comment</span>: {{ parseResult.ingredientParsed.comment }}</mat-list-item>
+    <mat-list-item role="listitem"><span class="fieldName">Preparation note</span>: {{ parseResult.ingredientParsed.comment }}</mat-list-item>
   </mat-list>
 <mat-list role="list" *ngIf="parseResult">
   <mat-list-item role="listitem"><span class="fieldName">Requests remaining</span>: {{ parseResult.requestsRemaining }}</mat-list-item>
