Adding mailing list signup

--- a/src/app/public/home-page/home-page.component.html
+++ b/src/app/public/home-page/home-page.component.html
@@ -37,3 +37,13 @@
 <div *ngIf="requestsRemaining !== null">
   <span class="fieldName">Requests remaining</span>: {{ requestsRemaining }}
 </div>
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      Sign up
+    </mat-panel-title>
+  </mat-expansion-panel-header>
+
+  <app-mailing-list></app-mailing-list>
+
+</mat-expansion-panel>
