--- a/src/app/public/home-page/home-page.component.scss
+++ b/src/app/public/home-page/home-page.component.scss
@@ -50,3 +50,10 @@ mat-card {
     margin-right: 2px;
   }
 }
+
+mat-expansion-panel {
+  margin-top: 50px;
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
