Refactoring navbar to separate component

--- a/src/app/public/home-page/home-page.component.html
+++ b/src/app/public/home-page/home-page.component.html
@@ -1,6 +1,4 @@
-<mat-toolbar color="primary">
-  <span>Ingredient Parser - Developer Demo</span>
-</mat-toolbar>
+<app-nav></app-nav>
 <form>
     <mat-form-field class="input-full-width" floatPlaceholder="never" hideRequiredMarker>
       <input matInput placeholder="1 1/2 cups finely chopped red onions" name="ingredientRaw" [(ngModel)]="ingredientRaw" required>
