Redoing the layout and navbar

--- a/src/app/_components/mailing-list/mailing-list.component.scss
+++ b/src/app/_components/mailing-list/mailing-list.component.scss
@@ -1,12 +1,8 @@
+form {
+  max-width: 450px;
+}
+
 #mc_embed_signup_scroll {
   display: flex;
   flex-direction: column;
-}
-
-p {
-  margin-bottom: 20px;
-}
-
-.description {
-  font-size: 12pt;
 }
