--- a/src/app/_components/nav/nav.component.html
+++ b/src/app/_components/nav/nav.component.html
@@ -1,3 +1,8 @@
 <mat-toolbar color="primary">
-  <span>Ingredient Parser - Developer Demo</span>
+  <span><a [routerLink]="['/']">Ingredient Parser</a></span>
+
+  <span class="fill-remaining-space"></span>
+
+  <button mat-button [routerLink]="['/demo']">Demo</button>
+  <button mat-button color="accent" [routerLink]="['/signup']">Sign Up</button>
 </mat-toolbar>
