Adding curl snippet

--- a/src/app/public/home-page/home-page.component.scss
+++ b/src/app/public/home-page/home-page.component.scss
@@ -33,13 +33,7 @@ span.fieldName {
   font-family: Consolas, 'Courier New', Courier, monospace;
 }
 
-.code-example {
-  color: silver;
-  background: black;
-  font-family: Consolas, 'Courier New', Courier, monospace;
-}
-
-div.error {
+div.top-level {
   margin-top: 15px;
 }
 
