--- a/src/app/_components/nav/nav.component.scss
+++ b/src/app/_components/nav/nav.component.scss
@@ -16,3 +16,17 @@ mat-toolbar.compressed {
     display: block;
   }
 }
+
+.menu-button {
+  margin-right: 45px;
+}
+
+.sidenav-container {
+  flex: 1 0 auto;
+  margin-top: 56px;
+}
+
+.sidenav-button {
+  font-size: 26pt;
+  padding: 25px 35px;
+}
