--- a/src/app/public/about/about.component.html
+++ b/src/app/public/about/about.component.html
@@ -1,54 +1,34 @@
+
+<h2>Understand your ingredients</h2>
 <div class="flex-grid">
   <div class="col">
-    <h2>Understand your ingredients</h2>
     <p>Programmatic understanding.</p>
   </div>
   <div class="col"></div>
   <div class="col"><img class="flex-graphic" src="/assets/img/ingredient-translation.png" /></div>
 </div>
 
+<h2>Use Cases</h2>
 <div class="flex-grid">
-    <div class="col">
-      <h2>Use Cases</h2>
-      <mat-card class="example-card">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Searchability</mat-card-title>
-        </mat-card-header>
-        <img mat-card-image src="/assets/img/search-icon.png" alt="Magnifying glass">
-        <mat-card-content>
-          <p>Make your recipes searchable.</p>
-        </mat-card-content>
-      </mat-card>
-      <ul>
-        <li>Store ingredients in a structured database</li>
-      </ul>
-    </div>
-    <div class="col">
-      <mat-card class="example-card">
-          <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Shoppability</mat-card-title>
-          </mat-card-header>
-          <img mat-card-image src="/assets/img/shopping-cart-icon.png" alt="Magnifying glass">
-          <mat-card-content>
-            <p>Build shopping carts from recipes.</p>
-          </mat-card-content>
-        </mat-card>
-    </div>
-    <div class="col">
-      <mat-card class="example-card">
-          <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Database</mat-card-title>
-          </mat-card-header>
-          <img mat-card-image src="/assets/img/database-icon.png" alt="Magnifying glass">
-          <mat-card-content>
-            <p>Build an ingredient database from your recipes.</p>
-          </mat-card-content>
-        </mat-card>
-    </div>
+  <div class="col">
+    <app-feature-card
+      imageUrl="/assets/img/search-icon.png"
+      imageAlt="Magnifying glass"
+      contents="Make your recipes searchable."></app-feature-card>
   </div>
+  <div class="col">
+    <app-feature-card
+      imageUrl="/assets/img/shopping-cart-icon.png"
+      imageAlt="Shopping cart"
+      contents="Build shopping carts from recipes."></app-feature-card>
+  </div>
+  <div class="col">
+      <app-feature-card
+        imageUrl="/assets/img/database-icon.png"
+        imageAlt="Database icon"
+        contents="Build an ingredient database from your recipes"></app-feature-card>
+  </div>
+</div>
 
 <h2>Contact Us</h2>
 <p><a href="mailto:michael@mtlynch.io">michael@mtlynch.io</a>.</p>
