--- a/src/app/public/about/about.component.scss
+++ b/src/app/public/about/about.component.scss
@@ -2,19 +2,24 @@
 
 .flex-grid {
     display: flex;
+    justify-content: space-between;
     @include respond-to('small') {
-        display: block;
+      display: block;
     }
   }
 
   .col {
     flex: 1;
+    width: 32%;
+    @include respond-to('small') {
+      width: 100%;
+    }
   }
 
   .flex-graphic {
     border-radius: 15px;
     width: 400px;
     @include respond-to('small') {
-        width: 100%;
+      width: 100%;
     }
   }
