--- a/src/app/_components/nav/nav.component.html
+++ b/src/app/_components/nav/nav.component.html
@@ -5,6 +5,7 @@
 
   <button mat-button [routerLink]="['/about']">About</button>
   <button mat-button [routerLink]="['/demo']">Demo</button>
+  <button mat-button [routerLink]="['/docs']">Docs</button>
   <button mat-button color="accent" [routerLink]="['/signup']">Sign Up</button>
 </mat-toolbar>
 
@@ -27,6 +28,7 @@
     <mat-nav-list>
       <p class="sidenav-button"><a [routerLink]="['/about']" (click)="sidenav.toggle()">About</a><br /></p>
       <p class="sidenav-button"><a [routerLink]="['/demo']" (click)="sidenav.toggle()">Demo</a><br /></p>
+      <p class="sidenav-button"><a [routerLink]="['/docs']" (click)="sidenav.toggle()">Docs</a><br /></p>
       <p class="sidenav-button"><a [routerLink]="['/signup']" (click)="sidenav.toggle()">Sign Up</a><br /></p>
     </mat-nav-list>
   </mat-sidenav>
