Smoothing out UI elements for consistency across pages

--- a/src/app/public/about/about.component.html
+++ b/src/app/public/about/about.component.html
@@ -1,5 +1,5 @@
 
-<h2>Understand your ingredients</h2>
+<h1>Understand your ingredients</h1>
 <div class="flex-grid">
   <div class="col">
     <p>The Ingredient Parser API turns plain recipe strings into beautiful, structured data.</p>
@@ -33,5 +33,5 @@
 <h2>Contact</h2>
 <p class="full-width-content">
   Questions? Please reach out to <a href="mailto:contact@ingredientparser.com">contact@ingredientparser.com</a>,
-  and I will be happy to assist you.
+  and we'll be happy to assist you.
 </p>
