--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @import '~styles/breakpoints';
 
 div.page-content {
-  padding-top: 12px;
+  padding-top: 0;
   padding-left: 5%;
   padding-right: 5%;
   overflow-x: hidden;
