--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import './breakpoints';
 @import './fonts';
+@import './icons';
 @import './global';
