Replacing signup page with Mashape link

--- a/src/app/_components/nav/nav.component.html
+++ b/src/app/_components/nav/nav.component.html
@@ -6,7 +6,7 @@
   <button mat-button [routerLink]="['/about']">About</button>
   <button mat-button [routerLink]="['/demo']">Demo</button>
   <button mat-button [routerLink]="['/docs']">Docs</button>
-  <button mat-button color="accent" [routerLink]="['/signup']">Sign Up</button>
+  <a href="https://market.mashape.com/zestfuldata/recipe-and-ingredient-analysis"><button mat-button color="accent">Get Started</button></a>
 </mat-toolbar>
 
 <mat-toolbar color="primary" class="compressed">
@@ -29,7 +29,7 @@
       <p class="sidenav-button"><a [routerLink]="['/about']" (click)="sidenav.toggle()">About</a><br /></p>
       <p class="sidenav-button"><a [routerLink]="['/demo']" (click)="sidenav.toggle()">Demo</a><br /></p>
       <p class="sidenav-button"><a [routerLink]="['/docs']" (click)="sidenav.toggle()">Docs</a><br /></p>
-      <p class="sidenav-button"><a [routerLink]="['/signup']" (click)="sidenav.toggle()">Sign Up</a><br /></p>
+      <p class="sidenav-button"><a href="https://market.mashape.com/zestfuldata/recipe-and-ingredient-analysis">Get Started</a><br /></p>
     </mat-nav-list>
   </mat-sidenav>
 </mat-sidenav-container>
