Broken syntax highlighting

--- a/src/app/public/docs/docs.component.html
+++ b/src/app/public/docs/docs.component.html
@@ -8,7 +8,15 @@
 
 <h3>Request</h3>
 
-<app-code-snippet [contents]="requestExample"></app-code-snippet>
+<textarea highlight-js [options]="{}" [lang]="'typescript'">
+{
+  "ingredients": [
+    "2 tablespoons butter",
+    "1 1/2 cups finely chopped red onions",
+    "½ tsp brown sugar"
+  ]
+}
+</textarea>
 
 <h4>Fields</h4>
 
