Upgrading to Angular 6

--- a/src/app/public/demo/demo.component.scss
+++ b/src/app/public/demo/demo.component.scss
@@ -48,6 +48,10 @@ div.top-level {
   margin-top: 15px;
 }
 
+button {
+  margin-right: 15px;
+}
+
 div.result-cards {
   padding: 25px 0px;
   display: flex;
