--- a/src/app/public/docs/docs.component.scss
+++ b/src/app/public/docs/docs.component.scss
@@ -15,6 +15,11 @@ h4 {
   margin: 20px 0px;
 }
 
+pre {
+  max-width: 800px;
+  font-size: 11pt;
+}
+
 .code {
   font-family: Consolas, 'Courier New', Courier, monospace;
   font-size: 11pt;
