Fixing broken code snippets

--- a/src/app/public/demo/demo.component.html
+++ b/src/app/public/demo/demo.component.html
@@ -47,5 +47,5 @@
 </div>
 <div *ngIf="curlExample" class="top-level">
   <div>Or, using <span class="code">curl</span>:</div>
-  <pre><code highlight [code]="curlExample" [language]="'bash'"></code></pre>
+  <pre><code highlight [code]="curlExample"></code></pre>
 </div>
