--- a/src/app/public/docs/docs.component.html
+++ b/src/app/public/docs/docs.component.html
@@ -8,7 +8,7 @@
 
 <h3>Request</h3>
 
-<pre><code highlight [code]="requestExample" [language]="'javascript'"></code></pre>
+<pre><code highlight [code]="requestExample"></code></pre>
 
 <h4>Fields</h4>
 
@@ -26,7 +26,7 @@
 
 <h3>Response</h3>
 
-<pre><code highlight [code]="responseExample" [language]="'javascript'"></code></pre>
+<pre><code highlight [code]="responseExample"></code></pre>
 
 <h4>Fields</h4>
 
