Adding Terms of Service

--- a/src/app/public/docs/docs.component.html
+++ b/src/app/public/docs/docs.component.html
@@ -122,3 +122,7 @@
 <p>We are currently developing client libraries for common languages like Python and Ruby.</p>
 
 <p>Want support for the language you use? <a href="mailto:contact@ingredientparser.com">Email</a> to let us know!</p>
+
+<h2>Terms</h2>
+
+<p>See <a [routerLink]="['/terms-of-service']">Terms of Service</a>.</p>
