Adding note about mixed ingredients

--- a/src/app/public/docs/docs.component.html
+++ b/src/app/public/docs/docs.component.html
@@ -115,6 +115,9 @@
   <li>
     Non-numeric quantities (e.g., <span class="code">"Three tablespoons"</span>) are not supported.
   </li>
+  <li>
+    Mixtures of ingredients (e.g., <span class="code">"2 tsp vinegar + 1 tbsp baking powder"</span>) are not supported.
+  </li>
 </ul>
 
 <h2>Client Libraries</h2>
